2013-04-26  Andreas Kupries  <andreask@activestate.com>

	* crosshair.tcl: [Bug 3603562]: Integrated changes made by Frank
	* pkgIndex.tcl: to automatically track changes in canvas scale,
	* ../../examples/canvas/crosshair_scaled.tcl: i.e. zooming. Bumped
	  version to 1.2 (new feature). New example for scaling.

2013-03-25  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tklib 0.6 ========================
	* 

2013-02-25  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* crosshair.tcl: [Bug 3603562]: Tweaks and fixes for robustness.
	* ../../examples/canvas/crosshair_for_axes.tcl: Examples of bounded
	* ../../examples/canvas/crosshair_for_multixyplot.tcl: crosshairs.

2013-02-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* crosshair.tcl: [Bug 3603562]: Allow the confinement of the
	* crosshair.man: crosshairs to one or more rectangular bounding
	* pkgIndex.tcl: boxes. Bumped version to 1.1.

2009-01-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tklib 0.5 ========================
	*

2008-11-27  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* crosshair.tcl: Split the two crosshair lines into four, one per
	* crosshair.man: direction, and changed the locations so that the
	* pkgIndex.tcl: canvas will not pick the crosshairs as the
	'current' object under the cursor. Bumped version to 1.0.2

2008-11-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* crosshair.tcl: Fixed missing namespace before first
	* crosshair.man: procedure definition. My fault. Made
	* pkgIndex.tcl: namespace use fully qualified. Bumped
	  version to 1.0.1.

2008-11-10  Andreas Kupries  <andreask@activestate.com>

	* crosshair.man: Fixed doc bugs found by Larry Virden
	  [Bug 2255255]. These were my bad, not Kevin's.

2008-11-04  Andreas Kupries  <andreask@activestate.com>

	* crosshair.man: New module and package, crosshairs for