@@ -1,3 +1,9 @@
+2013-07-04  Andreas Kupries  <andreask@activestate.com>
+
+	* crosshair.tcl: [Bug 7bb539fa97]: (::crosshair::off): Fixed
+	  various issues in the command. Thanks to <o.colin@tkfab.fr> for
+	  the report and fixes.
+
 2013-04-26  Andreas Kupries  <andreask@activestate.com>
 
 	* crosshair.tcl: [Bug 3603562]: Integrated changes made by Frank
